<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_nav_home_selector"
        android:title="@string/home" />

    <item
        android:id="@+id/moreFragment"
        android:icon="@drawable/ic_nav_more_selector"
        android:title="@string/analyze" />

    <item
        android:id="@+id/testFragment"
        android:icon="@drawable/ic_nav_test_selector"
        android:title="@string/test" />

    <item
        android:id="@+id/appsFragment"
        android:icon="@drawable/ic_nav_apps_selector"
        android:title="@string/apps" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_nav_setting_selector"
        android:title="@string/settings" />
</menu>